src/test/test-models/bad/compound-assign/plus_equals_type_mismatch2.stan
generated quantities {
  real x;
  vector[2] y = [1.0, 2.0]';
  x += y;
}
